
Pig Change Log

Trunk (unreleased changes)
 
INCOMPATIBLE CHANGES

PIG-3898: Refactor PPNL for non-MR execution engine (cheolsoo)

PIG-3485: Remove CastUtils.bytesToMap(byte[] b) method from LoadCaster interface (cheolsoo) 

PIG-3419: Pluggable Execution Engine (achalsoni81 via cheolsoo)

PIG-2207: Support custom counters for aggregating warnings from different udfs (aniket486)

IMPROVEMENTS

PIG-3901: Organize the Pig properties file and document all properties (mrflip via cheolsoo)

PIG-3867: Added hadoop home to build classpath for build pig with unit test on windows (Sergey Svinarchuk via gates)

PIG-3914: Change TaskContext to abstract class (cheolsoo)

PIG-3672: Pig should not check for hardcoded file system implementations (rohini)

PIG-3860: Refactor PigStatusReporter and PigLogger for non-MR execution engine (cheolsoo)

PIG-3865: Remodel the XMLLoader to work to be faster and more maintainable (aseldawy via daijy)

PIG-3737: Bundle dependent jars in distribution in %PIG_HOME%/lib folder (daijy)

PIG-3771: Piggybank Avrostorage makes a lot of namenode calls in the backend (rohini)

PIG-3851: Upgrade jline to 2.11 (daijy)

PIG-3884: Move multi store counters to PigStatsUtil from MRPigStatsUtil (rohini)

PIG-3591: Refactor POPackage to separate MR specific code from packaging (mwagner via cheolsoo)

PIG-3449: Move JobCreationException to org.apache.pig.backend.hadoop.executionengine (cheolsoo)

PIG-3765: Ability to disable Pig commands and operators (prkommireddi)

PIG-3731: Ability to specify local-mode specific configuration (useful for local/auto-local mode) (aniket486)

PIG-3793: Provide info on number of LogicalRelationalOperator(s) used in the script through LogicalPlanData (prkommireddi)

PIG-3778: Log list of running jobs along with progress (rohini)

PIG-3675: Documentation for AccumuloStorage (elserj via daijy)

PIG-3648: Make the sample size for RandomSampleLoader configurable (cheolsoo)
